package gameMsg;
message AssetUpdate {//资产更新
  required string nUserID = 1;//用户ID
  optional int32 nGold = 2;//游戏币
  optional int32 nMoney = 3;//金币
  optional string sAssets = 4;//新资产
}
